tests/inputs/err_bad_call_block_list_call.txt.snap
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "expected call expression in call block, got list literal",
    name: "err_bad_call_block_list_call.txt",
    line: 1,
}

syntax error: expected call expression in call block, got list literal (in err_bad_call_block_list_call.txt:1)
---------------------- err_bad_call_block_list_call.txt -----------------------
   1 > {% call [1, 2, 3] %}...{% endcall %}
     i                 ^ syntax error
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------

